Created PlauerController class and Tank class. Used as base classes for TankController_BP and Tank_BPs

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,9 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Battleground.Battleground
-GameDefaultMap=/Game/Battleground.Battleground
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/_Levels/Battleground.Battleground
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -51,5 +51,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
