--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -50,6 +50,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Left Track Throttle",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="Move Forward",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=E,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=D,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
