--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -53,6 +53,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Move Forward",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=E,Scale=1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=D,Scale=-1.000000)
++AxisMappings=(AxisName="Turn Right",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=C,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=X,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
