Movement Component done- AI Tanks are moveing using the same physics at the player tank.

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -44,18 +44,12 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Fire",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=Q,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=A,Scale=-1.000000)
-+AxisMappings=(AxisName="Right Track Throttle",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="Right Track Throttle",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="Move Forward",Key=E,Scale=1.000000)
-+AxisMappings=(AxisName="Move Forward",Key=D,Scale=-1.000000)
++AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Turn Right",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="Turn Right",Key=C,Scale=1.000000)
-+AxisMappings=(AxisName="Turn Right",Key=X,Scale=-1.000000)
++AxisMappings=(AxisName="Turn Right",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
